--- a/webstudio.css
+++ b/webstudio.css
@@ -12,3 +12,20 @@ button {
     background-color: #2196F3;
     color: white;
 }
+
+.blue {
+    color: #2196F3;
+  }
+  
+  .black2 {
+    color: black;
+  }
+  
+  .blue2 {
+    color: #2196F3;
+  }
+  
+  .white {
+    color: white;
+  }
+  
