--- a/portfolio.css
+++ b/portfolio.css
@@ -5,3 +5,19 @@ footer{
 .button button:hover {
     background-color: #2196F3
 }
+
+#webstydio-link {
+    opacity: 0.6;
+}
+
+#webstydio-link {
+    color: inherit;
+  }
+
+  .blue {
+    color: #2196F3;
+  }
+  
+  .black2 {
+    color: black;
+  }
