--- a/webstudio.css
+++ b/webstudio.css
@@ -35,13 +35,13 @@ button {
   color: white;
 }
 
-.link 
-  {
-    opacity: 0.6;
-}
-
 .address {
   opacity: 0.6;
+  color: white;
+}
+
+.footer-link {
+  color: white;
 }
 
 .blue-black {
@@ -51,3 +51,4 @@ button {
 a {
   text-decoration: none;
 }
+
