--- a/portfolio.css
+++ b/portfolio.css
@@ -6,7 +6,7 @@ footer{
     background-color: #2196F3
 }
 
-#webstudio-link {
+#footer-link {
     color: inherit;
   }
 
@@ -41,7 +41,7 @@ h3 {
   color: #ffffff;
 }
 
-.address-link {
+.footer-link {
   color: #ffffff60;
 }
 
